--- a/日常杂项经验汇总.md
+++ b/日常杂项经验汇总.md
@@ -1,7 +1,5 @@
-# 面试过程遇到的问题及经验汇总
-对面试过程中遇到的前端问题及知识点及过程汇总 by Qzx
-## 面试过程中前端知识点汇总
-
+# 日常遇到的问题及经验汇总
+日常遇到的问题汇总 by Qzx
 ## 与HR面谈过程中需注意点及关心问题汇总
 
 - 对公司需要了解的地方
@@ -14,6 +12,9 @@
 	7. 项目开发的形式，以小组为主还是项目合作
 	8. 前端常用的开发技术，框架，未来的计划(学习、组件化、测试)
 	9. 后端所用技术，前后端开发模式(分离 or 耦合)
+
+## 特殊的标点符号
+- 「」和 『』：
 
 
 
