前端知识添加

--- a/常用正则表达式整理汇总.md
+++ b/常用正则表达式整理汇总.md
@@ -1,19 +1,230 @@
-# 日常使用正则表达式整理汇总
-正则表达式的日常使用整理
+# JavaScript正则表达式整理汇总
+正则表达式的日常使用整理 -- by Qzx <br/>
+参考网址：
+
+- [javascript正则表达式总结 -- Segmentfaul](https://segmentfault.com/a/1190000008848061)
+- [JavaScript RegExp 对象 -- W3school](http://www.w3school.com.cn/jsref/jsref_obj_regexp.asp)
+- [最全正则表达式总结：验证QQ号、手机号、Email、中文、邮编、身份证、IP地址等](http://www.lovebxm.com/2017/05/31/RegExp/#常见的-正则表达式-校验)
+
+
 ## 正则表达式简介及方法
+- 正则表达式通过由普通字符和特殊字符组成的文字模板完成对字符串的校验，检索，替换。
 
-- 对公司需要了解的地方
-	1. 公司的规模，发展前景，个人发展和团队发展
+## 正则表达式的生成
+1. 调用RegExp对象的构造函数
 
+	```
+	 var reg = new RegExp('^[a-z]+[0-9]$', 'gi');
+	```
+	第一个参数是匹配模式，第二个参数是可选参数(g,i,m)，分别用于指定全局匹配、区分大小写的匹配和多行匹配。这种方式会在正则表达式运行时编译，多用于传参或者从另一来源获取。
+2. 使用正则表达式字面值，将匹配模式封闭在两个斜杠中
+
+	```
+	 var reg = /^[a-z]+[0-9]$/gi;
+	```
+	当表达式被赋值时，字面量形式提供正则表达式的编译，当正则表达式保持为常量时一般使用字面量方式。
+
+## 正则表达式的方法
+- test: 检索字符串中的指定子串，返回布尔值
+	
+	```
+	 /^\d[a-zA-Z]{3}$/.test('1aac')   // true
+	```
+- exec: 返回一个数组，数组中的第一条目是第一个匹配值
+
+	```
+	 /^\d[a-zA-Z]{3}$/.test('1aac')   // ['1aac']
+	```
+
+## 字符串(string)可以使用正则表达式的方法
+- search: 返回子串的开始位置,匹配没有则返回 -1
+
+	```
+	 'a12b2334c34'.search(/\d{4}/)    // 4 
+	 'a12b23a34c34'.search(/\d{4}/)   // -1 
+	```
+- match: 返回匹配到的子串，匹配没有则返回 null
+
+	```
+	 'a12b2334c34'.match(/\d{4}/)     // ["2334"]
+	 'a12b2334c3412'.match(/\d{4}/g)  // ["2334", "3412"]
+	 'a12b23a34c34'.match(/\d{4}/)    // null
+	```
+- replace: 替换匹配到的子串
+
+	```
+	 'a12b2334c34'.replace(/\d{4}/, 'cccc') // "a12bccccc34"
+	 'a12b2334a3412'.replace(/\d{4}/g, 'cccc') // "a12bccccacccc"
+	```
+- split: 将字符串分割成数组
+
+	```
+	 'a12b2334c34'.split(/\d{4}/)  // ["a12b", "c34"]
+	 'a12 b2334 c34'.split(/ /)    // ["a12", "b2334", "c34"]
+	```
+
+## 正则表达式的组成部分
+正则表达式的文字模板是有很多不同类型的字符组成的，包括：修饰符，元字符，转义字符，限定符，或结构，括号分组 <br>
+
+- <b>修饰符</b>
+	
+	| 字符  |  含义  |
+	| ---  | :----  |
+	|  g   |  执行全局匹配（查找所有匹配而非在找到第一个匹配后停止）|
+	|  i   |  执行对大小写不敏感的匹配  |
+	|  m   |  执行多行匹配  |
+
+- <b>元字符</b>
+	
+	| 字符 |  含义   |  字符    |  含义 |
+	| --- | :---- | :---- | :---- |
+	|  .  | 匹配除了换行符(n)以外的所有字符 |  |  |
+	| \w  | 匹配字母，数字，或者汉字 | \W  | 匹配除了字母，数字，汉字以外的其他字符 |
+	| \d  | 匹配数字 |  \D  | 匹配除了数字以外的其他字符 |
+	| \s  | 匹配任意的空白符（f,n,r,t,v）|  \S  | 匹配空白符以外的任意字符 |
+	| \b  | 匹配单词的开始或者结束   | \B | 匹配单词的非开始或者结束 |
+	| \n  | 查找换行符 |  \r  | 查找回车符 |
+	|  ^  | 匹配行首 |  $ | 匹配行尾 |
+
+- <b>转义字符</b> 
+
+	 ? * + | { [ ( ) ] } ^ $ . # 和 空白 以及 部分元字符 这些字符都是需要转义的。例如：需匹配 { 。
+	
+	```
+	\{  \d   \[
+	```
+	
+- <b>限定符 -- 量词</b> 
+
+	| 字符 |  含义   |  字符    |  含义 |
+	| --- | :---- | :---- | :---- |
+	|  *  | 匹配零次至多次 |  +  | 匹配一次至多次 |
+	|  ?  | 匹配零次或一次 |  {n,}| 至少匹配 n 次，n 为正整数|
+	| {n} | 匹配 n 次， n 为正整数| {{m,n}} | 至少匹配 m 次,之多匹配 n 次，m,n 为正整数|
+
+- <b>字符组[] 和 结构 | </b>
+
+	中括号字符组用来匹配括号内的字符之一
+	
+	```
+	 'fasfagxfasdfyfasfz'.split(/[xyz]/) //["fasfag", "fasdf", "fasf", ""]
+	 /c|d/.test('af') // false
+	 /c|d/.test('ad') // true
+	```
+	还有一种排除性字符组
+	
+	```
+	 'xaxbycz'.split(/[^xyz]/) //["x", "x", "y", "z"]
+	```
+- <b>括号分组</b>：(cd){1,} 可以匹配 cdcd.. 等，其中 cd 便是一个分组。
+- <b>贪婪模式 和 非贪婪模式 </b><br/>
+	默认情况下，所有的限定词都是贪婪模式，表示尽可能多的去捕获字符，而在限定符后增加“？”，则是非贪婪模式，表示尽可能少的去捕获字符。
+	
+	```
+	 'ccccccd'.match(/c+/) //["ccccc"]， 贪婪模式, 捕获所有
+     'ccccccd'.match(/c+？/) //["c"]， 非贪婪模式, 只捕获到第一个
+	```
+-  <b> 捕获分组 $1~$9属性</b> <br/>
+	`RegExp.$1...$9` 属性值为 String类型，用于返回正则表达式模式中某个子表达式匹配的文本，正则表达式中每个小括号内的部分表达式就是一个子表达式。
+	
+	```
+	 var str = 'X98Y87Z65';
+	 var reg = /^X(\d+)Y(\d+)Z(\d+)$/;  // 三个数字部分加了小括号，表示子表达式
+	 reg.test(str);  // 此处使用exec()等其他正则表达式的匹配方法也可以
+	 console.log(RegExp.$1);  // 98
+	 console.log(RegExp.$2);  // 87
+	 console.log(RegExp.$3);  // 65
+	 
+	 str = '<a href="http://www.365mini.com/" title="首页" target="_blank">CodePlayer</a>';
+	 reg = /<a\s[^>]*href="([^">]+)"[^>]*>/;   // 提取URL
+	 reg.exec(str);
+	 console.log(RegExp.$1);  // http://www.365mini.com/
+	 
+	 var str = '123-mm';
+	 var strReg = str.replace(/(\d+)-([A-Za-z]+)/g,'$2');
+	 console.log(strReg)  //mm  上面那段$2这个就是表示正则第二组个匹配到的内容
+	```
 
 ## 日常使用正则表达式
-- 获取 background-image 背景图里面的url 地址：
+- 获取 background-image 背景图里面的 url 地址：
 
 	```
 	$('.img').css('background-image').replace(/url\(([^\)]+)\).*/,'$1');
 	```
-- 
+- Email 地址：
 
+	```
+	 var reg = /^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/;
+	```
+- URL验证：
 
+	```
+	var reg = /[a-zA-z]+://[^\s]* 或 ^http://([\w-]+\.)+[\w-]+(/[\w-./?%&=]*)?$/
+	```
+- 中文验证：
+
+	```
+	var reg = /[\u4e00-\u9fa5]/gm;
+	```
+- 严格的手机号验证
+
+	```
+	var reg = /^https?:\/\/(([a-zA-Z0-9_-])+(\.)?)*(:\d+)?(\/((\.)?(\?)?=?&?[a-zA-Z0-9_-](\?)?)*)*$/i;
+	```
+- 去掉前后空格
+
+	```
+	 // 去掉前后空格
+    trim: function(str) {
+        var reg = /^\s+|\s+$/g;
+        return str.replace(reg, '');
+    },
+	```
+- 身份证号部分：
+
+	```
+	 var reg = /^(^[1-9]\d{7}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}$)|(^[1-9]\d{5}[1-9]\d{3}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])((\d{4})|\d{3}[Xx])$)$/;
+	```
+	
+## 检验字符的表达式
+	
+	1. 汉字：^[\u4e00-\u9fa5]{0,}$
+	2. 英文和数字：^[A-Za-z0-9]+$ 或 ^[A-Za-z0-9]{4,40}$
+	3. 长度为3-20的所有字符：^.{3,20}$
+	4. 由26个英文字母组成的字符串：^[A-Za-z]+$
+	5. 由26个大写英文字母组成的字符串：^[A-Z]+$
+	6. 由26个小写英文字母组成的字符串：^[a-z]+$
+	7. 由数字和26个英文字母组成的字符串：^[A-Za-z0-9]+$
+	8. 由数字、26个英文字母或者下划线组成的字符串：^\w+$ 或 ^\w{3,20}$
+	9. 中文、英文、数字包括下划线：^[\u4E00-\u9FA5A-Za-z0-9_]+$
+	10. 可以输入含有^%&',;=?$\"等字符：[^%&',;=?$\x22]+
+	11. 禁止输入含有~的字符：[^~\x22]+
+
+## 特殊需求表达式
+
+1. Email地址：^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$
+域名：[a-zA-Z0-9][-a-zA-Z0-9]{0,62}(/.[a-zA-Z0-9][-a-zA-Z0-9]{0,62})+/.?
+InternetURL：[a-zA-z]+://[^\s]* 或 ^http://([\w-]+\.)+[\w-]+(/[\w-./?%&=]*)?$
+2. 手机号码：^(13[0-9]|14[5|7]|15[0|1|2|3|5|6|7|8|9]|18[0|1|2|3|5|6|7|8|9])\d{8}$
+3. 电话号码("XXX-XXXXXXX"、"XXXX-XXXXXXXX"、"XXX-XXXXXXX"、"XXX-XXXXXXXX"、"XXXXXXX"和"XXXXXXXX)：^(\(\d{3,4}-)|\d{3.4}-)?\d{7,8}$
+4. 国内电话号码(0511-4405222、021-87888822)：\d{3}-\d{8}|\d{4}-\d{7}
+5. 身份证号(15位、18位数字)：^\d{15}|\d{18}$
+6. 短身份证号码(数字、字母x结尾)：^([0-9]){7,18}(x|X)?$ 或 ^\d{8,18}|[0-9x]{8,18}|[0-9X]{8,18}?$
+7. 帐号是否合法(字母开头，允许5-16字节，允许字母数字下划线)：^[a-zA-Z][a-zA-Z0-9_]{4,15}$
+8. 密码(以字母开头，长度在6~18之间，只能包含字母、数字和下划线)：^[a-zA-Z]\w{5,17}$
+强密码(必须包含大小写字母和数字的组合，不能使用特殊字符，长度在8-10之间)：^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,10}$
+9. 日期格式：^\d{4}-\d{1,2}-\d{1,2}
+10. 一年的12个月(01～09和1～12)：^(0?[1-9]|1[0-2])$
+11. 一个月的31天(01～09和1～31)：^((0?[1-9])|((1|2)[0-9])|30|31)$
+xml文件：^([a-zA-Z]+-?)+[a-zA-Z0-9]+\\.[x|X][m|M][l|L]$
+12. 中文字符的正则表达式：[\u4e00-\u9fa5]
+13. 双字节字符：[^\x00-\xff]    (包括汉字在内，可以用来计算字符串的长度(一个双字节字符长度计2，ASCII字符计1))
+14. 空白行的正则表达式：\n\s*\r    (可以用来删除空白行)
+15. HTML标记的正则表达式：<(\S*?)[^>]*>.*?</\1>|<.*? />    (网上流传的版本太糟糕，上面这个也仅仅能部分，对于复杂的嵌套标记依旧无能为力)
+16. 首尾空白字符的正则表达式：^\s*|\s*$或(^\s*)|(\s*$)    (可以用来删除行首行尾的空白字符(包括空格、制表符、换页符等等)，非常有用的表达式)
+17. 腾讯QQ号：[1-9][0-9]{4,}    (腾讯QQ号从10000开始)
+18. 中国邮政编码：[1-9]\d{5}(?!\d)    (中国邮政编码为6位数字)
+19. IP地址：\d+\.\d+\.\d+\.\d+    (提取IP地址时有用)
+20. IP地址：((?:(?:25[0-5]|2[0-4]\\d|[01]?\\d?\\d)\\.){3}(?:25[0-5]|2[0-4]\\d|[01]?\\d?\\d))
 
 
