谷歌插件添加

--- a/前端知识及工具整理.md
+++ b/前端知识及工具整理.md
@@ -25,3 +25,5 @@
 - 移动端触摸滑动框架：[Swiper中文官网](http://www.swiper.com.cn/)
 - 前端图表类框架：[Echarts中文官网](http://echarts.baidu.com/index.html)
 - js实用模块化工具库：[Lodash.js中文官网](https://www.lodashjs.com/)
+- 谷歌浏览器插件：[谷歌插件汇总](https://www.chromefor.com/category/web开发/)
+- web常用插件安装包：[插件安装包]()
