谷歌插件添加

--- a/前端知识及工具整理.md
+++ b/前端知识及工具整理.md
@@ -26,4 +26,4 @@
 - 前端图表类框架：[Echarts中文官网](http://echarts.baidu.com/index.html)
 - js实用模块化工具库：[Lodash.js中文官网](https://www.lodashjs.com/)
 - 谷歌浏览器插件：[谷歌插件汇总](https://www.chromefor.com/category/web开发/)
-- web常用插件安装包：[插件安装包]()
+- web常用插件安装包：[插件安装包](https://github.com/liuyun012/Js_frame/tree/master/%E8%B0%B7%E6%AD%8C%E6%B5%8F%E8%A7%88%E5%99%A8%E5%89%8D%E7%AB%AF%E6%8F%92%E4%BB%B6%E6%B1%87%E6%80%BB)
