精灵图插件postcss

--- a/前端知识及工具整理.md
+++ b/前端知识及工具整理.md
@@ -4,9 +4,11 @@
 - Gulp中文官网：[官网](https://www.gulpjs.com.cn)
 - Gulp常用插件使用教程：[gulp插件教程](http://www.ydcss.com/archives/category/构建工具)
 - 前端构建工具Gulp的使用:[介绍及技巧](http://www.cnblogs.com/2050/p/4198792.html)
+- Gulp插件：[小图片合并 gulp-load-plugins](https://yalishizhude.github.io/2016/10/27/icon/)
 - npm package.json属性详解(npm init): [npm属性详解](http://www.cnblogs.com/tzyy/p/5193811.html)
 - 常用 Git 命令清单: [Git命令 -- 阮一峰](http://www.ruanyifeng.com/blog/2015/12/git-cheat-sheet.html)
 - PostCSS深入学习: [PostCSS和LESS一起使用](https://www.w3cplus.com/PostCSS/using-postcss-together-with-sass-stylus-or-less.html) 
+- Postcss常用插件介绍: [css处理工具Postcss介绍](http://artery.thunisoft.com/post/Postcss)
 - Rem移动端适配：[使用Flexible实现手淘H5页面的终端适配](https://github.com/amfe/article/issues/17)
 - 处理移动端click事件300 毫秒延迟: [fastclick.js](https://github.com/ftlabs/fastclick)
 - 手机网页前端调试面板Eruda: [Eruda](https://github.com/liriliri/eruda/blob/master/doc/README_CN.md)
