--- a/前端知识及工具整理.md
+++ b/前端知识及工具整理.md
@@ -1,6 +1,7 @@
 # 前端知识及工具整理
 - 我的Github地址：[Github - Js_frame](https://github.com/liuyun012/Js_frame)
 - 图书购买：《细说网页制作》、《细说DOM编程》、《细说JavaScript语言》
+- 对象所有属性和方法查看： console.dir()
 - Gulp中文官网：[官网](https://www.gulpjs.com.cn)
 - Gulp常用插件使用教程：[gulp插件教程](http://www.ydcss.com/archives/category/构建工具)
 - 前端构建工具Gulp的使用:[介绍及技巧](http://www.cnblogs.com/2050/p/4198792.html)
