--- a/前端和后端注释文档生成.md
+++ b/前端和后端注释文档生成.md
@@ -200,6 +200,10 @@ apidoc -h
 		* @apiSuccess {String}  profile.image Avatar-Image.
 		*/
 	  ```
+### demo示例效果图
+
+![image][https://github.com/liuyun012/Js_frame/blob/master/images/1532659983362.jpg]
+![image][https://github.com/liuyun012/Js_frame/blob/master/images/1532660016333.jpg]
 	  
 ## jsDoc的使用教程
 
