--- a/前端和后端注释文档生成.md
+++ b/前端和后端注释文档生成.md
@@ -200,7 +200,11 @@ apidoc -h
 		* @apiSuccess {String}  profile.image Avatar-Image.
 		*/
 	  ```
-### demo示例效果图
+
+### 六、示例代码下载
+
+[apiDocDemo示例代码](https://github.com/liuyun012/Js_frame/tree/master/apiDocDemo)
+### 七、demo示例效果图
 
 ![](https://github.com/liuyun012/Js_frame/blob/master/images/1532659983362.jpg) 
 
