修改博客目录

--- a/docs/guide/快应用踩坑集锦.md
+++ b/docs/guide/快应用踩坑集锦.md
@@ -26,9 +26,13 @@
 
 ## 组件使用
 - 组件
-	- span 格式化的文本，只能作为<text>与\<a>的子组件
+	- span 格式化的文本，只能作为`<text>`与`<a>`的子组件
 	- input 没有 tel 类型
 	- label 没有子组件 ，属性只有 target 到目标id, 不是 for
 	- 所有与大小相关的样式（例如width、font-size）均以基准宽度（默认750px）为基础
 	- border-(top,bottom,left,right) 样式无效，需要分开设置
-	- input 获取value ，e.target.attr.value  "\<input attr={"placeholder":"请输入手机号","id":"phone","type":"number","value":"1"} style={"flex":1,"paddingLeft":"10px","fontSize":"32px","color":"#686868"}></input>"
+	- input 获取value ，e.target.attr.value 
+	
+	```html
+	<input attr={"placeholder":"请输入手机号","id":"phone","type":"number","value":"1"} style={"flex":1,"paddingLeft":"10px","fontSize":"32px","color":"#686868"}></input>
+	```
