--- a/docs/guide/前端编码规范整理.md
+++ b/docs/guide/前端编码规范整理.md
@@ -1,4 +1,5 @@
-前端编码规范 -- 项目整理
+# 前端编码规范 -- 项目整理
+
 ## 基本规范
 - 缩进
 	- 两个空格对齐
@@ -49,7 +50,10 @@
  * 赋值具体规范及示例
    - var i = 0；
    - <div class = 'abc' style = ''>content</div>
- * 字符串规范    * var str = 'a';  // 普通单字符命名    * var str1 = 'abc';  // 普通字符串命名    * var strs = 'a + "b"'  // 字符串嵌套情况 
+ * 字符串规范
+    * var str = 'a';  // 普通单字符命名
+    * var str1 = 'abc';  // 普通字符串命名
+    * var strs = 'a + "b"'  // 字符串嵌套情况 
 ```	   
 
 ## 命名规范
@@ -144,7 +148,13 @@
 - 多属性组件属性书写多行显示，单标记标签结束符放在行末
 
 ```
-<input   type = "text"   placeholder = "活动名称(2-8个字)"   id = "tableName"   ref = "tableName"   onBlur = {(e) => this._checkName(e)}   onFocus = {(e) => this._clearError(e)} />
+<input
+   type = "text"
+   placeholder = "活动名称(2-8个字)"
+   id = "tableName"
+   ref = "tableName"
+   onBlur = {(e) => this._checkName(e)}
+   onFocus = {(e) => this._clearError(e)} />
 ``` 
 
 
